--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "https://github.com/beaudar/beaudar.git"
   },
   "scripts": {
-    "start": "parcel serve src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --no-hmr --port 4000 --open http://localhost:4000/index.html",
+    "start": "parcel serve src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --no-hmr --no-source-maps --port 4000 --open http://localhost:4000/index.html",
     "build": "parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting",
     "lint": "tslint --project tsconfig.json",
     "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
