--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v2
       - name: run npm install && build
         run: |
-          npm install
+          sudo npm install
           npm run build
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
