--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,8 @@ jobs:
         uses: actions/checkout@v2
       - name: run npm install && build
         run: |
-          sudo npm install
-          npm run build
+          npm install
+          sudo npm run build
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
