--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,7 +17,7 @@ jobs:
       - name: run npm install && build
         run: |
           npm install
-          sudo npm run build
+          sudo parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
