--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,10 +14,10 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
-      - name: run npm install && build
-        run: |
-          npm install
-          sudo parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting
+      - name: npm install
+        run: npm install
+      - name: parcel build
+        run: sudo parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
