--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,6 +14,8 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
+        with: 
+          persist-credentials: false
       - name: npm install
         run: npm install
       - name: parcel build
