--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,7 +19,9 @@ jobs:
       - name: npm install
         run: npm install
       - name: parcel build
-        run: sudo parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting
+        run: |
+          cd /home/runner/work/beaudar/beaudar
+          ls
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
