--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,14 +14,12 @@ jobs:
     steps:
       - name: checkout code
         uses: actions/checkout@v2
-        with: 
+        with:
           persist-credentials: false
       - name: npm install
         run: npm install
       - name: parcel build
-        run: |
-          cd /home/runner/work/beaudar/beaudar
-          ls
+        run: sudo parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
