--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,16 @@
 {
-  "editor.formatOnSave": true,
   "html.format.enable": false,
   "json.format.enable": false,
+  "editor.formatOnSave": true,
+  "editor.defaultFormatter": "esbenp.prettier-vscode",
   "editor.detectIndentation": false,
-  "editor.tabSize": 2
+  "editor.insertSpaces": true,
+  "editor.tabSize": 2,
+  "editor.lineNumbers": "on",
+  "editor.rulers": [
+    80
+  ],
+  "files.encoding": "utf8",
+  "files.eol": "\n",
+  "files.trimTrailingWhitespace": true,
 }
