--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
     "url": "https://github.com/beaudar/beaudar.git"
   },
   "scripts": {
-    "start": "parcel serve src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --no-hmr --no-source-maps --port 4000 --open http://localhost:4000/index.html",
-    "build": "parcel build src/*.html src/client.ts src/stylesheets/themes/*/{index,beaudar}.scss --experimental-scope-hoisting",
+    "start": "vite serve src --config vite.config.ts",
+    "build": "parcel build src/*.html src/client.ts --experimental-scope-hoisting",
     "lint": "tslint --project tsconfig.json",
     "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
     "deploy": "gh-pages --dist dist"
@@ -36,6 +36,8 @@
     "posthtml-md": "^1.1.0",
     "sass": "^1.32.12",
     "tslint": "^6.1.3",
-    "typescript": "^4.1.3"
+    "typescript": "^4.1.3",
+    "vite": "2.6.4",
+    "vite-plugin-posthtml": "^0.0.3"
   }
 }
