--- a/package.json
+++ b/package.json
@@ -18,15 +18,21 @@
   },
   "scripts": {
     "start": "vite serve src --config vite.config.ts",
-    "build": "parcel build src/*.html src/client.ts --experimental-scope-hoisting",
+    "build": "parcel build src/*.html src/client.ts --no-scope-hoist",
     "lint": "tslint --project tsconfig.json",
     "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
     "deploy": "gh-pages --dist dist"
   },
+  "engines": {
+    "node": "14"
+  },
   "devDependencies": {
+    "@parcel/packager-xml": "^2.0.1",
+    "@parcel/transformer-sass": "^2.0.1",
+    "@parcel/transformer-xml": "^2.0.1",
     "autoprefixer": "^9.8.6",
     "gh-pages": "^3.1.0",
-    "parcel-bundler": "^1.12.4",
+    "parcel": "^2.0.1",
     "parcel-plugin-clean-dist": "^0.0.6",
     "posthtml-expressions": "^1.7.1",
     "posthtml-include": "^1.6.0",
