--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,8 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: npm install
-        run: npm install
+      - name: yarn install
+      - uses: borales/actions-yarn@v2.3.0
+        with:
+          cmd: install
       - name: run build
         run: sudo npm run build
       - name: ssh-deploy
