--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,6 +16,9 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '14'
       - name: yarn install
         uses: borales/actions-yarn@v2.3.0
         with:
