--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,13 +16,10 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '14'
       - name: yarn install
-        uses: borales/actions-yarn@v2.3.0
-        with:
-          cmd: install
+        uses: CultureHQ/actions-yarn@master
+          with:
+            args: install
       - name: run build
         run: sudo npm run build
       - name: ssh-deploy
