--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,10 +16,11 @@ jobs:
         uses: actions/checkout@v2
         with:
           persist-credentials: false
-      - name: yarn install
-        uses: CultureHQ/actions-yarn@master
+      - name: Setup node
+        uses: actions/setup-node@v2
         with:
-          args: install
+          node-version: '14'
+      - run: yarn install
       - name: run build
         run: sudo npm run build
       - name: ssh-deploy
