--- a/package.json
+++ b/package.json
@@ -33,6 +33,10 @@
     "gh-pages": "^3.1.0",
     "parcel": "^2.0.1",
     "parcel-plugin-clean-dist": "^0.0.6",
+    "postcss": "^8.0.0",
+    "postcss-custom-properties": "^12.0.1",
+    "postcss-import": "^14.0.2",
+    "postcss-url": "^10.1.3",
     "posthtml-expressions": "^1.7.1",
     "posthtml-include": "^1.6.0",
     "posthtml-md": "^1.1.0",
