--- a/package.json
+++ b/package.json
@@ -44,5 +44,8 @@
     "typescript": "^4.1.3",
     "vite": "2.6.4",
     "vite-plugin-posthtml": "^0.0.3"
+  },
+  "dependencies": {
+    "@github/text-expander-element": "^2.2.2"
   }
 }
