--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -21,8 +21,10 @@ jobs:
         with:
           node-version: '14'
       - run: yarn install
-      - name: run build
-        run: sudo npm run build
+      - name: run build build-html
+        run: sudo npm run build build-html
+      - name: run build build-script
+        run: sudo npm run build build-script
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
