--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,12 +19,10 @@ jobs:
       - name: Setup node
         uses: actions/setup-node@v2
         with:
-          node-version: '14'
+          node-version: '16'
       - run: yarn install
-      - name: run build build-html
-        run: sudo npm run build build-html
-      - name: run build build-script
-        run: sudo npm run build build-script
+      - name: run build
+        run: sudo npm run build
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
