fix: 修复 vite-plugin-posthtml 插件的错误，更新 postcss

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,6 @@
 {
   "compilerOptions": {
-    "target": "ES5",
+    "target": "ESNext",
     "module": "ESNext",
     "lib": ["ES2017", "DOM"],
     "moduleResolution": "Node",
