--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   "devDependencies": {
     "autoprefixer": "^9.8.6",
     "gh-pages": "^3.1.0",
-    "postcss": "^8.0.0",
+    "postcss": "8.2.13",
     "postcss-custom-properties": "^12.0.1",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
@@ -40,8 +40,7 @@
     "posthtml-md": "^1.1.0",
     "tslint": "^6.1.3",
     "typescript": "^4.1.3",
-    "vite": "2.6.4",
-    "vite-plugin-posthtml": "^0.0.3"
+    "vite": "2.6.4"
   },
   "dependencies": {
     "@github/text-expander-element": "^2.2.2"
