--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "build": "npm run build-html && npm run build-script",
     "build-html": "vite build --config vite.build-html.config.js",
     "build-script": "vite build --config vite.build-script.config.js",
-    "lint": "tslint --project tsconfig.json",
+    "lint": "eslint -c .eslintrc.js --ext .ts",
     "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
     "deploy": "gh-pages --dist dist"
   },
@@ -29,16 +29,18 @@
     "node": "16"
   },
   "devDependencies": {
+    "@typescript-eslint/eslint-plugin": "^5.10.1",
+    "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
+    "eslint": "^8.7.0",
     "gh-pages": "^3.1.0",
     "postcss": "8.4.5",
     "postcss-custom-properties": "^12.1.3",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
-    "posthtml-expressions": "^1.7.1",
+    "posthtml-expressions": "1.9.0",
     "posthtml-include": "^1.6.0",
     "posthtml-md": "^1.1.0",
-    "tslint": "^6.1.3",
     "typescript": "^4.5.5",
     "vite": "2.7.13"
   },
