--- a/package.json
+++ b/package.json
@@ -34,13 +34,13 @@
     "autoprefixer": "^10.4.2",
     "eslint": "^8.7.0",
     "gh-pages": "^3.1.0",
+    "marked": "^4.0.12",
     "postcss": "8.4.5",
     "postcss-custom-properties": "^12.1.3",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
     "posthtml-expressions": "1.9.0",
     "posthtml-include": "^1.6.0",
-    "posthtml-md": "^1.1.0",
     "typescript": "^4.5.5",
     "vite": "2.7.13"
   },
