--- a/package.json
+++ b/package.json
@@ -39,10 +39,11 @@
     "postcss-custom-properties": "^12.1.3",
     "postcss-import": "^14.0.2",
     "postcss-url": "^10.1.3",
+    "posthtml": "^0.16.6",
     "posthtml-expressions": "1.9.0",
     "posthtml-include": "^1.6.0",
     "typescript": "^4.5.5",
-    "vite": "2.9.13"
+    "vite": "^2.7.13"
   },
   "dependencies": {
     "@github/text-expander-element": "^2.2.2"
