--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
+      - run: npm install -g npm@8.19.2
       - run: npm install
       - run: sudo npm run build
       - name: ssh-deploy
