--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,9 +20,10 @@ jobs:
         uses: actions/setup-node@v2
         with:
           node-version: '16'
-      - run: npm install -g npm@8.19.2
-      - run: npm install
-      - run: sudo npm run build
+      - run: |
+          npm install
+          sudo vite build --config vite.build-html.config.js
+          sudo vite build --config vite.build-script.config.js
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
