--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -22,9 +22,8 @@ jobs:
           node-version: '16'
       - run: |
           npm install
-          npm install -g vite@2.7.13
-          sudo vite build --config vite.build-html.config.js
-          sudo vite build --config vite.build-script.config.js
+          sudo npm run build-html
+          sudo npm run build-script
       - name: ssh-deploy
         uses: easingthemes/ssh-deploy@v2.0.7
         env:
