--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "node": "16"
   },
   "devDependencies": {
+    "@types/marked": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
@@ -43,7 +44,7 @@
     "posthtml-expressions": "1.9.0",
     "posthtml-include": "^1.6.0",
     "typescript": "^4.5.5",
-    "vite": "^2.7.13"
+    "vite": "^3.1.3"
   },
   "dependencies": {
     "@github/text-expander-element": "^2.2.2"
