--- a/package.json
+++ b/package.json
@@ -2,8 +2,6 @@
   "name": "beaudar",
   "version": "1.0.0",
   "description": "Chinese version of 'utterances'.",
-  "private": true,
-  "license": "MIT",
   "keywords": [
     "github",
     "comments-widget",
@@ -16,26 +14,31 @@
     "type": "git",
     "url": "https://github.com/beaudar/beaudar.git"
   },
+  "license": "MIT",
   "scripts": {
-    "start": "vite serve --config ./config/vite.dev-server.config.js --host",
     "build": "npm run build-html && npm run build-script",
     "build-html": "vite build --config ./config/vite.build-html.config.js",
     "build-script": "vite build --config ./config/vite.build-script.config.js",
-    "lint": "eslint -c .eslintrc.js --ext .ts",
     "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
-    "deploy": "gh-pages --dist dist"
+    "deploy": "gh-pages --dist dist",
+    "lint": "eslint -c .eslintrc.js --ext .ts",
+    "start": "vite serve --config ./config/vite.dev-server.config.js --host"
   },
-  "engines": {
-    "node": "16"
+  "dependencies": {
+    "@github/text-expander-element": "^2.2.2"
   },
   "devDependencies": {
+    "@types/dompurify": "^3.0.2",
     "@types/marked": "^4.0.7",
     "@typescript-eslint/eslint-plugin": "^5.10.1",
     "@typescript-eslint/parser": "^5.10.1",
     "autoprefixer": "^10.4.2",
+    "dompurify": "^3.0.3",
     "eslint": "^8.7.0",
     "gh-pages": "^3.1.0",
+    "lit-html": "^2.7.4",
     "marked": "^4.0.12",
+    "mathjax": "^3.2.2",
     "postcss": "8.4.5",
     "postcss-custom-properties": "^12.1.3",
     "postcss-import": "^14.0.2",
@@ -46,7 +49,7 @@
     "typescript": "^4.5.5",
     "vite": "^3.1.3"
   },
-  "dependencies": {
-    "@github/text-expander-element": "^2.2.2"
+  "engines": {
+    "node": "16"
   }
 }
