--- a/package.json
+++ b/package.json
@@ -17,15 +17,15 @@
   "license": "MIT",
   "scripts": {
     "build": "npm run build-html && npm run build-script",
+    "preview": "npm run build && http-server --port 3000 ./dist",
     "build-html": "vite build --config ./config/vite.build-html.config.js",
     "build-script": "vite build --config ./config/vite.build-script.config.js",
-    "predeploy": "yarn run build && echo beaudar.lipk.org > dist/CNAME",
-    "deploy": "gh-pages --dist dist",
     "lint": "eslint -c .eslintrc.js --ext .ts",
     "start": "vite serve --config ./config/vite.dev-server.config.js --host"
   },
   "dependencies": {
-    "@github/text-expander-element": "^2.2.2"
+    "@github/text-expander-element": "^2.2.2",
+    "http-server": "^14.1.1"
   },
   "devDependencies": {
     "@types/dompurify": "^3.0.2",
@@ -47,7 +47,7 @@
     "posthtml-expressions": "1.9.0",
     "posthtml-include": "^1.6.0",
     "typescript": "^4.5.5",
-    "vite": "^3.1.3"
+    "vite": "^3.2.7"
   },
   "engines": {
     "node": "16"
